# HFSQL-Classic-Fic-inspector

./: .gitignore  Cargo.toml  README.md  mkdocs.yml
docs/: index.md
docs/advanced/: extensibility.md  performance.md  security.md
docs/api-reference/: examples.md  rest-api.md  types.md
docs/backend/: api-server.md  architecture.md  cli-commands.md  core-module.md  sql-odbc.md  storage-engine.md
docs/frontend/: api-integration.md  architecture.md  components-guide.md  pages-overview.md  state-management.md
docs/getting-started/: configuration.md  first-steps.md  installation.md
docs/guides/: data-flow.md  step-by-step-backend.md  step-by-step-frontend.md  troubleshooting.md
fic-inspector/: .gitignore  electron-builder.yml  index.html  package.json  tailwind.config.js  vite.config.ts
fic-inspector/assets/: .gitkeep
fic-inspector/electron/: main.ts  preload.js  preload.ts  tsconfig.json  tsconfig.main.json  tsconfig.preload.json
fic-inspector/scripts/: copy-preload.js  rename-preload.js
src/: App.tsx  index.css  lib.rs  main.rs  migration.rs
src/activity/: mod.rs  tracker.rs
src/api/: handlers.rs  mod.rs  server.rs
src/cli/: commands.rs  mod.rs
src/components/: FolderPicker.tsx  Layout.tsx  MenuHandler.tsx  SqlAutocomplete.tsx  StatusBar.tsx
src/config/: mod.rs  settings.rs
src/core/: fic.rs  mmo.rs  mod.rs  ndx.rs
src/dsn/: handlers.rs  manager.rs  mod.rs
src/hooks/: useSqlAutocomplete.ts
src/logger/: logger.rs  mod.rs
src/pages/: Dashboard.tsx  DsnManagement.tsx  Logs.tsx  Settings.tsx
src/services/: dsnService.ts
(+24 files in other folders)
